--- a/Jornada 2k20/Conceitos/Desafios/Desafio03/package.json
+++ b/Jornada 2k20/Conceitos/Desafios/Desafio03/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.2",
     "axios-mock-adapter": "^1.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -30,6 +29,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.2",
-    "@testing-library/user-event": "^7.1.2"
+    "@testing-library/user-event": "^7.1.2",
+    "axios": ">=0.21.1"
   }
 }
