--- a/Jornada 2k20/Conceitos/projetoreact/package.json
+++ b/Jornada 2k20/Conceitos/projetoreact/package.json
@@ -16,7 +16,6 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.35",
         "@types/react-dom": "^16.9.8",
-        "axios": "^0.19.2",
         "polished": "^3.6.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -43,6 +42,7 @@
         "@types/styled-components": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^2.34.0",
         "@typescript-eslint/parser": "^2.34.0",
+        "axios": ">=0.21.1",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-import-resolver-typescript": "^2.0.0",
