--- a/Jornada 2k20/GoBarber/GoBarber-web/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-web/package.json
@@ -12,7 +12,6 @@
         "@types/react-dom": "^16.9.0",
         "@unform/core": "^2.1.3",
         "@unform/web": "^2.1.3",
-        "axios": "^0.19.2",
         "date-fns": "^2.16.1",
         "polished": "^3.6.5",
         "react": "^16.13.1",
@@ -54,6 +53,7 @@
         "@types/yup": "^0.29.3",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
         "@typescript-eslint/parser": "^3.4.0",
+        "axios": ">=0.21.1",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.2.0",
         "eslint-config-prettier": "^6.11.0",
