--- a/Jornada Antiga/Conceitos/Primeiro projeto com ReactJS/package.json
+++ b/Jornada Antiga/Conceitos/Primeiro projeto com ReactJS/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "axios": "^0.19.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -34,6 +33,7 @@
         ]
     },
     "devDependencies": {
+        "axios": ">=0.21.1",
         "eslint": "^5.16.0",
         "eslint-config-airbnb": "^17.1.1",
         "eslint-config-prettier": "^6.0.0",
